@@ -1,0 +1,14 @@
+{
+  "client_id" : "b8e9d222-c4ee-414c-ac29-b0eff1f32400",
+  "authorization_user_agent" : "DEFAULT",
+  "redirect_uri" : "msauth://com.microsoft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
+  "multiple_clouds_supported":true,
+  "broker_redirect_uri_registered": true,
+  "account_mode": "MULTIPLE",
+  "authorities" : [
+    {
+      "type": "CIAM",
+      "authority_url": "https://login.microsoftonline.com/msidlabciam1.onmicrosoft.com/"
+    }
+  ]
+}
