@@ -2,12 +2,10 @@
   "client_id" : "b8e9d222-c4ee-414c-ac29-b0eff1f32400",
   "authorization_user_agent" : "DEFAULT",
   "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
-  "broker_redirect_uri_registered": true,
-  "account_mode": "MULTIPLE",
   "authorities" : [
     {
-      "type": "AAD",
-      "authority_url": "https://login.microsoftonline.com/msidlabciam1.onmicrosoft.com/",
+      "type": "CIAM",
+      "authority_url": "https://msidlabciam1.ciamlogin.com/msidlabciam1.onmicrosoft.com",
       "default": true
     }
   ]
